--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
+import org.apache.tools.ant.filters.ReplaceTokens
+
 group 'NBTAddon'
 version '1.0.0'
 
 apply plugin: 'java'
 
-sourceCompatibility = targetCompatibility = 1.8
+sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
 
@@ -30,7 +32,15 @@ dependencies {
     implementation 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
 
     // Skript API
-    compileOnly 'ch.njol:skript:2.2-dev35b'
+    implementation('ch.njol:skript:2.2-dev35b') {
+        transitive = false // non-transitive since we're only using its API
+    }
+}
+
+processResources {
+    inputs.files 'build.gradle'
+    from sourceSets.main.resources.srcDirs
+    filter(ReplaceTokens, tokens: [version: version])
 }
 
 task wrapper(type: Wrapper) {
